objects/Proof_of_Value__c.object
<CustomObject>
    <fields>
        <fullName>Strategic_Imperative_3__c</fullName>
        <description>Describe a company business driver that this POV will help achieve or improve</description>
        <inlineHelpText>Describe a company business driver that this POV will help achieve or improve</inlineHelpText>
        <label>Strategic Imperative 3</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Metrics__c</fullName>
        <description>Provide any specific measures the customer has identified as driving a purchase decision (ie. Successful POV, Cost Benefit, Proof of superior capability, etc.)</description>
        <inlineHelpText>Provide any specific measures the customer has identified as driving a purchase decision (ie. Successful POV, Cost Benefit, Proof of superior capability, etc.)</inlineHelpText>
        <label>Success Metrics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supporting_Opportunity__c</fullName>
        <description>Supporting Opportunity</description>
        <inlineHelpText>Auto-populated: Sales Opportunity specific to this POV</inlineHelpText>
        <label>Supporting Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proof of Values</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Test_Environment_LAB_Production__c</fullName>
        <description>Dropdown: Select if this POV will be performed in a test lab or on the customer’s production network.</description>
        <inlineHelpText>Dropdown: Select if this POV will be performed in a test lab or on the customer’s production network</inlineHelpText>
        <label>Test Environment (LAB/Production)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Tools__c</fullName>
        <description>Document any tools the customer will use during the POV (such as scanning, threat insertion, performance testing, or external evaluators)</description>
        <inlineHelpText>Document any tools the customer will use during the POV (such as scanning, threat insertion, performance testing, or external evaluators).</inlineHelpText>
        <label>Testing Tools</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value_Proposition_1_OLD__c</fullName>
        <description>Describe the value benefits of the Cisco Unique solution offering that will help accelerate or improve the customer’s business</description>
        <inlineHelpText>Describe the value benefits of the Cisco Unique solution offering that will help accelerate or improve the customer’s business</inlineHelpText>
        <label>Value Proposition OLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Improve Security Brand</fullName>
                </value>
                <value>
                    <fullName>Secure Internet of Everything</fullName>
                </value>
                <value>
                    <fullName>Grow Revenue</fullName>
                </value>
                <value>
                    <fullName>Improve Cap Ex</fullName>
                </value>
                <value>
                    <fullName>Improve Op Ex</fullName>
                </value>
                <value>
                    <fullName>New Business Models</fullName>
                </value>
                <value>
                    <fullName>Enable Mobile Workers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Proposition_1__c</fullName>
        <description>Value Proposition</description>
        <inlineHelpText>Describe additional business benefits that this POV will help achieve or improve in the customer’s organization.</inlineHelpText>
        <label>Value Proposition 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Proposition_2__c</fullName>
        <description>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</description>
        <inlineHelpText>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</inlineHelpText>
        <label>Value Proposition 2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Proposition_3__c</fullName>
        <description>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</description>
        <inlineHelpText>Describe the relevant business imitative(s) that the customer has initiated to meet it’s business driver and that this POV will be satisfying</inlineHelpText>
        <label>Value Proposition 3</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Propositions_Other__c</fullName>
        <description>Describe the value benefits of the Cisco Unique solution offering that will help accelerate or improve the customer’s business</description>
        <inlineHelpText>Describe the value benefits of the Cisco Unique solution offering that will help accelerate or improve the customer’s business</inlineHelpText>
        <label>Value Propositions Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Reason__c</fullName>
        <description>Describe what drove the technical win / technical loss of this POV (this is separate from the sales opportunity win/loss reasons)</description>
        <inlineHelpText>Describe what drove the technical win / technical loss of this POV (this is separate from the sales opportunity win/loss reasons)</inlineHelpText>
        <label>Win/Loss Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workspace_Lost_Cancelled_Reason__c</fullName>
        <description>Opportunity_Workspace Lost_Cancelled_Reason</description>
        <formula>TEXT( Opportunity_Workspace__r.Workspace_Lost_Cancelled_Reason__c )</formula>
        <label>Workspace Lost/Cancelled Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_Outcome__c</fullName>
        <description>Opportunity Workspace Status</description>
        <formula>TEXT(Opportunity_Workspace__r.PSS_Workspace_Status__c)</formula>
        <label>Workspace Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSTAR_Order_Amount__c</fullName>
        <label>eSTAR Order Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eSTAR_Order_No__c</fullName>
        <description>To capture the eStar Order number</description>
        <label>eSTAR Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSTAR_Order_Status__c</fullName>
        <label>eSTAR Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>No Stack Available</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>ORDER CREATED</fullName>
                </value>
                <value>
                    <fullName>BACKLOGGED</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eStar_Current_Due_Date__c</fullName>
        <description>eStar Current Due Date   as in eStar</description>
        <inlineHelpText>Populated via upload from eStar.</inlineHelpText>
        <label>eStar Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eStar_Order_Cost__c</fullName>
        <description>eStar Order Cost  as in eStar</description>
        <inlineHelpText>Populated via upload from eStar.</inlineHelpText>
        <label>eStar Order Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eStar_Original_Due_Date__c</fullName>
        <description>eStar Original Due Date  as in eStar</description>
        <inlineHelpText>Populated via upload from eStar.</inlineHelpText>
        <label>eStar Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eStar_Ship_Date__c</fullName>
        <description>Ship date as in eStar</description>
        <inlineHelpText>Populated via upload from eStar.</inlineHelpText>
        <label>eStar Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zzSoftware_Version_Number__c</fullName>
        <description>Software Version Number</description>
        <label>zzSoftware Version Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>4.1</fullName>
                </value>
                <value>
                    <fullName>4.10</fullName>
                </value>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>5.1</fullName>
                </value>
                <value>
                    <fullName>5.2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object is to provide the Proof of Value form</description>
    <label>Proof of Value</label>
    <nameField>
        <label>Proof of Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof of Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>POV_ID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>eSTAR_Order_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Work_In_Progress_PoVs</fullName>
        <columns>eSTAR_Order_Status__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Start_Date__c</columns>
        <columns>POV_Duration_Days__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>PoV_Order_Category__c</columns>
        <columns>Hardware_Source__c</columns>
        <columns>Products__c</columns>
        <columns>POV_Amount__c</columns>
        <columns>POV_Contact__c</columns>
        <columns>Security_AM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eSTAR_Order_Status__c</field>
            <operation>equals</operation>
            <value>OVERDUE,PARTIALLY RETURNED</value>
        </filters>
        <filters>
            <field>PoV_Order_Category__c</field>
            <operation>equals</operation>
            <value>POV Security</value>
        </filters>
        <label>All Past Due Security POVs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Approved_PoVs</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Approval_Status__c</columns>
        <columns>eSTAR_Order_No__c</columns>
        <columns>eSTAR_Order_Amount__c</columns>
        <columns>eSTAR_Order_Status__c</columns>
        <columns>Decision_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>POV_Status__c</field>
            <operation>equals</operation>
            <value>POV Approved</value>
        </filters>
        <filters>
            <field>Am_Lead_SE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_sAM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Approved PoVs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_PoVs_Pending_Approval</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>POV_Status__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <filters>
            <field>Am_Lead_SE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_sAM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My PoVs Pending Approval</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Rejected_PoVs</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>POV_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Am_Lead_SE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_sAM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Rejected PoVs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Active_PoV</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>eSTAR_Order_No__c</columns>
        <columns>eSTAR_Order_Status__c</columns>
        <columns>eSTAR_Order_Amount__c</columns>
        <columns>POV_Amount__c</columns>
        <columns>POV_Contact__c</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Start_Date__c</columns>
        <columns>PoV_Order_Category__c</columns>
        <columns>POV_Duration_Days__c</columns>
        <columns>POV_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Am_SEMGR__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_RM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_OD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team’s Active PoV</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Past_Due_Security_POVs</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5 or 6)</booleanFilter>
        <columns>eSTAR_Order_Status__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Start_Date__c</columns>
        <columns>POV_Duration_Days__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>PoV_Order_Category__c</columns>
        <columns>Hardware_Source__c</columns>
        <columns>Products__c</columns>
        <columns>POV_Amount__c</columns>
        <columns>POV_Contact__c</columns>
        <columns>Security_AM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eSTAR_Order_Status__c</field>
            <operation>equals</operation>
            <value>OVERDUE,PARTIALLY RETURNED</value>
        </filters>
        <filters>
            <field>PoV_Order_Category__c</field>
            <operation>equals</operation>
            <value>POV Security</value>
        </filters>
        <filters>
            <field>Am_Lead_SE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_sAM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_OD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_SEMGR__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team's Past Due Security POVs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PoVs_Waiting_My_Approval</fullName>
        <booleanFilter>((1 AND 5 ) OR (2 AND 6) OR (3 AND 7)) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>POV_Status__c</columns>
        <columns>POV_Approval_Status__c</columns>
        <columns>Approximate_POV_List_Price__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>POV_Amount__c</columns>
        <columns>POV_Contact__c</columns>
        <columns>POV_Duration_Days__c</columns>
        <columns>PoV_Order_Category__c</columns>
        <columns>POV_Start_Date__c</columns>
        <columns>Security_AM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Am_SEMGR__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_RM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Am_OD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>POV_Status__c</field>
            <operation>equals</operation>
            <value>Approval In Progress</value>
        </filters>
        <filters>
            <field>POV_Approval_Status__c</field>
            <operation>equals</operation>
            <value>SAM Submitted</value>
        </filters>
        <filters>
            <field>POV_Approval_Status__c</field>
            <operation>equals</operation>
            <value>SE Manager Approved</value>
        </filters>
        <filters>
            <field>POV_Approval_Status__c</field>
            <operation>equals</operation>
            <value>RM Approved</value>
        </filters>
        <label>PoVs Waiting My Approval</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>POV_Submit</fullName>
        <active>true</active>
        <description>POV submit</description>
        <label>POV Submit</label>
    </recordTypes>
    <validationRules>
        <fullName>CEE_Required</fullName>
        <active>true</active>
        <description>CEE_Required when PoV Order Category is  POV Assurance</description>
        <errorConditionFormula>TEXT(PoV_Order_Category__c) = 'POV Assurance' &amp;&amp;
Customer_Engagements_Events_CEE__c =''</errorConditionFormula>
        <errorDisplayField>Customer_Engagements_Events_CEE__c</errorDisplayField>
        <errorMessage>CEE is Required when PoV Order Category is  POV Assurance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POV_Contact_Email</fullName>
        <active>true</active>
        <description>POV Contact Email cannot be Cisco Id</description>
        <errorConditionFormula>$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp;

CONTAINS( POV_Contact__r.Email, '@cisco.com')</errorConditionFormula>
        <errorDisplayField>POV_Contact__c</errorDisplayField>
        <errorMessage>POV Contact Email address cannot  be Cisco</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POV_Duration_Days_valid_values</fullName>
        <active>true</active>
        <description>Check if POV Duration (Days) is 90 days</description>
        <errorConditionFormula>$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp; 

POV_Duration_Days__c != 90</errorConditionFormula>
        <errorDisplayField>POV_Duration_Days__c</errorDisplayField>
        <errorMessage>Valid length for POVs is 90 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POV_Outcome_for_completed_Povs</fullName>
        <active>true</active>
        <description>If eSTAR Order Status = Completed, POV Outcome must equal Tech Win or Tech Loss.</description>
        <errorConditionFormula>$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
 $Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp; 

 TEXT(eSTAR_Order_Status__c) == 'Completed'
&amp;&amp;
( TEXT(POV_Outcome__c) != 'Tech Win' ||
  TEXT(POV_Outcome__c) != 'Tech Loss'
)</errorConditionFormula>
        <errorDisplayField>POV_Outcome__c</errorDisplayField>
        <errorMessage>Valid values for completed POVs is either 'Tech Win' or 'Tech Loss'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POV_Solution_Mandatory</fullName>
        <active>true</active>
        <description>POV_Solution_Mandatory</description>
        <errorConditionFormula>$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp;

TEXT(PoV_Order_Category__c) = 'POV Security'
&amp;&amp;
ISBLANK(TEXT(POV_Solution_Advanced_Threat__c))
&amp;&amp;
ISBLANK(TEXT(POV_Solution_Email_Security__c ))
&amp;&amp;
ISBLANK(TEXT(POV_Solution_NGFW_IPS__c ))
&amp;&amp;
ISBLANK(TEXT(POV_Solution_Policy_Access__c))
&amp;&amp;
ISBLANK(TEXT(POV_Solution_Web_Security__c))</errorConditionFormula>
        <errorDisplayField>POV_Solution_Advanced_Threat__c</errorDisplayField>
        <errorMessage>For Security POV's, at least one of the POV Solutions is required to be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Role_Required</fullName>
        <active>true</active>
        <description>Partner_Role_Required</description>
        <errorConditionFormula>$User.ProfileId != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
TEXT(POV_Type__c) = 'Partner Executed' &amp;&amp;
ISBLANK ( TEXT(Partner_Role__c) )</errorConditionFormula>
        <errorDisplayField>Partner_Role__c</errorDisplayField>
        <errorMessage>Partner Role Contact is required when POV Type is Partner Executed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_SE_Contact_Required</fullName>
        <active>true</active>
        <description>Partner_SE_Contact_Required</description>
        <errorConditionFormula>$User.ProfileId != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
TEXT(POV_Type__c) = 'Partner Executed' &amp;&amp;
ISBLANK (Partner_SE_Contact__c)</errorConditionFormula>
        <errorDisplayField>Partner_SE_Contact__c</errorDisplayField>
        <errorMessage>Partner SE Contact is required when POV Type is Partner Executed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Sales_Contact_Required</fullName>
        <active>true</active>
        <description>Partner_Sales_Contact_Required</description>
        <errorConditionFormula>$User.ProfileId != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
TEXT(POV_Type__c) = 'Partner Executed' &amp;&amp;
ISBLANK ( Partner_Sales_Contact__c )</errorConditionFormula>
        <errorDisplayField>Partner_Sales_Contact__c</errorDisplayField>
        <errorMessage>Partner Sales Contact is required when POV Type is Partner Executed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percent_of_POV_check</fullName>
        <active>true</active>
        <description>Percent_of_POV check</description>
        <errorConditionFormula>$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp;

TEXT(PoV_Order_Category__c) = 'POV Security'
&amp;&amp;
NULLVALUE( Percent_of_POV_Advanced_Threat__c, 0) +
NULLVALUE( Percent_of_POV_Email_Security__c, 0) +
NULLVALUE( Percent_of_POV_NGFW_IPS__c, 0) +
NULLVALUE( Percent_of_POV_Policy_Access__c, 0) +
NULLVALUE( Percent_of_POV_Web_Security__c , 0)  != 1.0</errorConditionFormula>
        <errorDisplayField>Percent_of_POV_Advanced_Threat__c</errorDisplayField>
        <errorMessage>The total sum of percentage must equal 100 for all Security POVs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reseller_Partner_Required</fullName>
        <active>true</active>
        <description>Reseller_Partner_Required</description>
        <errorConditionFormula>$User.ProfileId != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
TEXT(POV_Type__c) = 'Partner Executed' &amp;&amp;
ISBLANK (Reseller_Partner__c)</errorConditionFormula>
        <errorDisplayField>Reseller_Partner__c</errorDisplayField>
        <errorMessage>Reseller Partner is required when POV Type is Partner Executed.</errorMessage>
    </validationRules>
</CustomObject>